nginx-service-nodeport.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  selector:
    name: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30004
