nodejs-bookshelf.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookshelf-nodejs
  labels:
    name: bookshelf-nodejs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bookshelf-nodejs
  template:
    metadata:
      labels:
        app: bookshelf-nodejs
    spec:
      containers:
      - name: bookshelf-nodejs
        image: kusumaningrat16/nodejs-bookshelf:v1.2 ## see the project here -> https://github.com/kusumaningrat/bookshelf-be-nodejs.git
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: bookshelf-nodejs-service
spec:
  type: NodePort
  selector:
    app: bookshelf-nodejs
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30001
