nodejs-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejsweb
  labels:
    name: nodejsweb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodejsweb
  template:
    metadata:
      labels:
        app: nodejsweb
    spec:
      containers:
      - name: nodejsweb
        image: kusumaningrat16/nodejsweb:v1
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: nodejsweb-service
spec:
  type: NodePort
  selector:
    app: nodejsweb
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 30001
